--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <body>
 <head>
     <meta charset=“UTF-8” />
-    <title>Hajira Imran</title>
-    <link rel="shortcut icon" href="images/spider.jpg" type="image/x-icon" />
+   <title>Hajira Imran</title>
     <link type="text/css" rel="stylesheet" href="style.css" />
+
 </head>
 <div id="all">
     <div id="titlebar">
@@ -13,14 +13,46 @@
 </div>
 
 
+
 <div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="#achievements">Achievements</a>
-    <a href="#about">About</a>
+    <a class="active" href="index.html">Home</a>
+    <a href="achieve.html">Achievements</a>
+    <a href="about.html">About</a>
+    <a href="#favorites">Favorites</a>
+    <a href="#help" class="split">Help</a>
+    
+   
   </div>
 
-<p>Hajira Imran</p>
-</head>
+  <div class="search">
+    <input type="text" placeholder="Search..">
+</div>
+
+<div class="home">
+    Honestly this is just a random webpage I made for myself out of boredom, using HTML and CSS. I'm making a webpage to help organize stuff for me. 
+<p>Give quick feedback on this webpage, here.
+</p>
+<label for="email">Enter your feedback:</label>
+<input type="email" id="email" name="email">
+
+</div>
+
+<div class="timeline">
+  
+  
+  <div class="container left">
+    <div class="content">
+      <h2></h2>
+      <p></p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="contentwo">
+      <h2>How was this webpage made?</h2>
+      <p>Like most websites or webpages, this one was made with a combination of HTML and CSS, and tears. I learned to do this from the Stanford CS105 coding course I took in 10th grade. I used Visual Studio Code and Notebook for some parts of the code, as wel as help from 'w3schools'. Also, I was crying just 15 minutes ago because all of my CSS (design) was blank, meaning there was no design or grid, and positioning on the page, it was just the plain text side by side. It looked so ugly, and I started crying because my CSS is currently 105 lines of code. It will probably be more by the time I'm finished obviously. But then I figured out a way to get it back, so thank you to the Notebook app. </p>
+    </div>
+  </div>
+</div>
 
 
 
